Simple AT parser